Fix bug where long project names cause scrollbar in add modal

--- a/src/styles/_bind-service.less
+++ b/src/styles/_bind-service.less
@@ -24,6 +24,9 @@
     &:first-of-type {
       margin-top: 0;
     }
+    strong {
+      .word-break();
+    }
   }
 
   .help-block {
